--- a/GhanaChocolate.html
+++ b/GhanaChocolate.html
@@ -211,7 +211,7 @@
         <div class="wf-intro ff">
             <div class="info">
                 <div class="img">
-                    <img src="https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverse.jpg" alt="YUniverse">
+                    <img src="https://cdn.jsdelivr.net/gh/webfontworld/lotte/GhanaChocolate.jpg" alt="GhanaChocolate">
                 </div>
                 
                 <div class="click">
@@ -221,7 +221,7 @@
                             <col style="width: 70%" />
                         </colgroup>
                         <tr>
-                            <th colspan="2">Y유니버스체(YUniverse)</a></th>
+                            <th colspan="2">가나초콜릿(GhanaChocolate)</a></th>
                         </tr>
                         <tr>
                             <td colspan="2"><a href="https://wess.tistory.com/pages/hangul">ㄱ ㄴ ㄷ ㄹ ㅁ ㅂ ㅅ ㅇ ㅈ ㅊ ㅋ ㅌ ㅍ ㅎ</a></td>
@@ -234,7 +234,7 @@
                         </tr>
                         <tr>
                             <td><a href="https://wess.tistory.com/pages/gothic">고딕체</a></td>
-                            <td><a href="https://wess.tistory.com/pages/company">kt</a></td>
+                            <td><a href="https://wess.tistory.com/pages/company">롯데</a></td>
                         </tr>
                         <tr>
                             <td><a href="https://wess.tistory.com/pages/style">1style</a></td>
@@ -242,8 +242,8 @@
                         </tr>
                     </table>
                     <div class="down">
-                        <a href="https://www.yspotlight.co.kr/brand/font" target="_blank">다운로드</a>
-                        <a href="https://github.com/webfontworld/kt" target="_blank">웹 폰트 다운로드</a>
+                        <a href="https://www.lotteconf.co.kr/prcenter/gana" target="_blank">다운로드</a>
+                        <a href="https://github.com/webfontworld/lotte" target="_blank">웹 폰트 다운로드</a>
                     </div>
                 </div>
             </div>
@@ -260,35 +260,24 @@
                 </div>
                 <div class="cont">
                     <div>
-<pre><code>font-family: 'YUniverse';</code></pre>
+<pre><code>font-family: 'GhanaChocolate';</code></pre>
                     </div>
                     <div>
-<pre><code>&lt;link href="https://webfontworld.github.io/kt/YUniverse.css" rel="stylesheet"&gt;</code></pre>
+<pre><code>&lt;link href="https://webfontworld.github.io/lotte/GhanaChocolate.css" rel="stylesheet"&gt;</code></pre>
                     </div>
                     <div>
-<pre><code>@import url('https://webfontworld.github.io/kt/YUniverse.css');</code></pre>
+<pre><code>@import url('https://webfontworld.github.io/lotte/GhanaChocolate.css');</code></pre>
                     </div>
                     <div>
 <pre><code>@font-face {
-    font-family: 'YUniverse';
-    font-weight: 300;
+    font-family: 'GhanaChocolate';
+    font-weight: normal;
     font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseLight.eot');
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseLight.eot?#iefix') format('embedded-opentype'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseLight.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseLight.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseLight.ttf') format("truetype");
-    font-display: swap;
-} 
-@font-face {
-    font-family: 'YUniverse';
-    font-weight: 700;
-    font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseBold.eot');
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseBold.eot?#iefix') format('embedded-opentype'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseBold.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseBold.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/kt/YUniverseBold.ttf') format("truetype");
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/lotte/GhanaChocolate.eot');
+    src: url('https://cdn.jsdelivr.net/gh/webfontworld/lotte/GhanaChocolate.eot?#iefix') format('embedded-opentype'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/lotte/GhanaChocolate.woff2') format('woff2'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/lotte/GhanaChocolate.woff') format('woff'),
+         url('https://cdn.jsdelivr.net/gh/webfontworld/lotte/GhanaChocolate.ttf') format("truetype");
     font-display: swap;
 } 
 </code></pre>
@@ -298,7 +287,7 @@
         </div>
 
         <div class="wf-view ff">
-            <h3 class="fw">폰트 살펴보기 <span class="active">300</span><span>700</span></h3>
+            <h3 class="fw">폰트 살펴보기 <span class="active">normal</span></h3>
             <div class="style">
                 <span class="style1" data-bg1="#f8f8f8" data-bg2="#000"></span>
                 <span class="style2" data-bg1="#000" data-bg2="#fff"></span>
@@ -316,8 +305,8 @@
             </div>
             <div class="view">
                 <div>
-                    <strong>Y유니버스체</strong>
-                    <em>YUniverse</em>
+                    <strong>가나초콜릿</strong>
+                    <em>GhanaChocolate</em>
                 </div>
             </div>
         </div>
@@ -328,14 +317,13 @@
             <h3>font-weight</h3>
             <input type="text" id="wf-weight-input" class="weightInput" placeholder="글씨를 입력하면 변경됩니다!">
             <ul class="wf-weight-preview">
-                <li class="w300" title="300">이 폰트의 WEIGHT는 여러가지가 있습니다. 이 폰트의 weight는 여러가지가 있습니다. 이 폰트의 두께는 여러가지가 있습니다.</li>
-                <li class="w700" title="700">이 폰트의 WEIGHT는 여러가지가 있습니다. 이 폰트의 weight는 여러가지가 있습니다. 이 폰트의 두께는 여러가지가 있습니다.</li>
+                <li class="wNormal" title="normal">이 폰트의 WEIGHT는 여러가지가 있습니다. 이 폰트의 weight는 여러가지가 있습니다. 이 폰트의 두께는 여러가지가 있습니다.</li>
             </ul>
         </div>
         <!-- //weight -->
 
         <div class="wf-size ff fw">
-            <h3>font-size <span class="active" data-weight="font-weight:300">300</span><span data-weight="font-weight:700">700</span></h3>
+            <h3>font-size <span class="active" data-weight="font-weight:normal">normal</span></h3>
             <input type="text" id="wf-size-input" class="weightInput" placeholder="글씨를 입력하면 변경됩니다!">
             <ul class="wf-size-preview">
                 <li class="s10">가 나 다 라 마 바 사 아 자 차 카 타 파 하 a b c d e f g h i j k l m n o p q r s t u v w x y z 0 1 2 3 4 5 6 7 8 9
@@ -375,7 +363,7 @@
         <!-- //size -->
 
         <div class="wf-layout ff fw">
-            <h3>Font-layout <span class="active">300</span><span>700</span></h3>
+            <h3>Font-layout <span class="active">normal</span></h3>
             <input type="text" id="wf-layout-input" class="weightInput" placeholder="글씨를 입력하면 변경됩니다!">
             <div class="flex">
                 <div class="col4">모든 국민은 인간으로서의 존엄과 가치를 가지며, 행복을 추구할 권리를 가진다. 국가는 개인이 가지는 불가침의 기본적 인권을 확인하고 이를 보장할 의무를 진다. 대한민국의 주권은
@@ -481,8 +469,8 @@
                         </tr>
                         <tr>
                             <td>BI/CI</td>
-                            <td>회사명, 브랜드명, 상품명, 로고, 마크, 슬로건, 캐치프레이즈</td>
-                            <td>○</td>
+                            <td class="red">회사명, 브랜드명, 상품명, 로고, 마크, 슬로건, 캐치프레이즈</td>
+                            <td class="red">금지</td>
                         </tr>
                         <tr>
                             <td rowspan="2">OFL</td>
@@ -511,7 +499,10 @@
                 </table>
             </div>
             <ul class="list fw">
-                <li>누구나 제약 없이 자유롭게 사용하고 재배포 하실 수 있습니다.</li>
+                <li>개인 및 기업 사용자를 포함한 모든 사용자에게 가나초콜릿체를 무료로 사용할 수 있는 권리를 드립니다. 이는 가나초콜릿체의 소유권에 대한 내용이 아니며, 사용권에 대한 내용입니다.</li>
+                <li>가나초콜릿체의 지적재산권은 전적으로 롯데제과 주식회사(“롯데제과”)가 보유하고 있으며 사용자는 다양한 매체에 자유롭게 특별한 허가 절차 없이 사용할 수 있습니다.</li>
+                <li>유료로 가나초콜릿체 자체를 양도하거나, 판매하는 등의 행위와 CI/로고 사용은 금지합니다.</li>
+                <li>가나초콜릿체를 사용한 인쇄물, 게임, 온/오프라인 광고물의 이미지는 롯데제과 프로모션을 위해 활용될 수 있습니다.</li>
                 <li class="line">제공되는 모든 서체의 지적 재산권을 포함한 모든 권리는 제작사에 있으니, 사용하기 전에 제작사 사이트에 가셔서 꼭 확인하시길 바랍니다.</li>
             </ul>
         </div>
