--- a/GhanaChocolate.html
+++ b/GhanaChocolate.html
@@ -34,7 +34,7 @@
         .fw {font-weight: normal;}
 
         .comments h2 {font-family: 'GhanaChocolate';}
-        .comments .comment-list ul li p {font-family: 'YUGhanaChocolateniverse';}
+        .comments .comment-list ul li p {font-family: 'GhanaChocolate';}
         .comments .comment-form textarea {font-family: 'GhanaChocolate';}
         .comments .comment-form .submit .btn {font-family: 'GhanaChocolate';}
         .related-articles ul li .title {font-family: 'GhanaChocolate';}
